# lob_sim

./: .env  .env.example  .gitignore  INTERVIEW.md  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  run_demo.bat  run_futures_scenario.bat  run_options_case_study.bat  run_options_case_study.sh  run_options_mm_case.bat  run_options_mm_case.sh  run_options_mm_interview_mode.bat  run_options_mm_quick.bat  run_options_mm_walkthrough_mode.bat  summary.md  write_summary_md.py
.github/workflows/: ci.yml
data/outputs/: summary_raw_1772138833.json  (+3 more)
docs/: binance_usdm_feed_semantics.md  design_choices.md  futures_benchmarks.md  futures_strategy_profiles.md  futures_validation.md  interview_talk_track.md  options_case_study_notes.md  options_mm_demo_guide.md  sanity_checks.md  what_real_data_would_change.md
experiments/: benchmark_futures_replay.py  compare_futures_strategy_profiles.py  run_experiments.py  run_options_case_study.py  run_options_scenario_matrix.py  run_options_toxicity_spread_sensitivity.py
lob_sim/: __init__.py  cli.py  config.py  util.py
scripts/: refresh_futures_recorded_case.py  refresh_futures_replay_summary.py  refresh_futures_showcase.py  refresh_futures_strategy_profile_reference.py  refresh_sample_outputs.py  verify_committed_artifacts.py
tests/: test_book_sync.py  test_committed_artifacts.py  test_fill_model.py  test_futures_invariants.py  test_futures_showcase.py  test_futures_strategy_profiles.py  test_gap_resync.py  test_options_demo.py  test_options_math.py  test_output_exports.py  test_sample_pack_integrity.py
(+60 files in other folders)
