[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lob-sim"
version = "0.1.0"
description = "Deterministic Binance USD-M replay, queue-aware passive-fill simulation, and a controlled dealer-pricing case study"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "websockets>=12.0",
  "python-dotenv>=1.0",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["lob_sim*"]
